<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Triangle">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="470dp"
        android:contentDescription="@string/triangleimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/triangle" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/a"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/side_a"
                android:textAllCaps="false"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/sideA"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textColor="@android:color/background_dark" />

            <TextView
                android:id="@+id/answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerSideA"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/b"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/side_b"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/sideB"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textColor="@android:color/background_dark" />

            <TextView
                android:id="@+id/answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerSideB"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/c"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/side_c"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/sideC"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textColor="@android:color/background_dark" />

            <TextView
                android:id="@+id/answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerSideC"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/AngleA"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/angle_a"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/angleA"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textColor="@android:color/background_dark" />

            <TextView
                android:id="@+id/answer4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerAngleA"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/AngleB"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/angle_b"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/angleB"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textColor="@android:color/background_dark" />

            <TextView
                android:id="@+id/answer5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerAngleB"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/AngleC"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/angle_c"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/angleC"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textColor="@android:color/background_dark" />

            <TextView
                android:id="@+id/answer6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerAngleC"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="70dp"
        android:onClick="clearAll"
        android:text="@string/clear_all"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/solve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="70dp"
        android:onClick="solve"
        android:text="@string/solve"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clear" />

    <TextView
        android:id="@+id/area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="130dp"
        android:text="@string/area"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/areaAns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="130dp"
        android:text="@string/areaAns"
        android:textAllCaps="false"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>