<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TicTacToePC">

    <ImageView
        android:id="@+id/board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:contentDescription="@string/board"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/board" />

    <ImageView
        android:id="@+id/place8X"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="272dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/x" />

    <Button
        android:id="@+id/place8"
        android:layout_width="114dp"
        android:layout_height="125dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="252dp"
        android:alpha="0"
        android:contentDescription="8"
        android:cursorVisible="false"
        android:onClick="click"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/place1O"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="608dp"
        android:clickable="false"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/o" />

    <ImageView
        android:id="@+id/place3O"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="280dp"
        android:layout_marginBottom="608dp"
        android:adjustViewBounds="false"
        android:clickable="false"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/o" />

    <ImageView
        android:id="@+id/place4O"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="496dp"
        android:clickable="false"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/o" />

    <ImageView
        android:id="@+id/place5O"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="152dp"
        android:layout_marginBottom="496dp"
        android:clickable="false"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/o" />

    <ImageView
        android:id="@+id/place6O"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="280dp"
        android:layout_marginBottom="496dp"
        android:clickable="false"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/o" />

    <ImageView
        android:id="@+id/place7O"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="384dp"
        android:clickable="false"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/o" />

    <ImageView
        android:id="@+id/place8O"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="160dp"
        android:layout_marginBottom="384dp"
        android:clickable="false"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/o" />

    <ImageView
        android:id="@+id/place9O"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="280dp"
        android:layout_marginBottom="384dp"
        android:clickable="false"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/o" />

    <ImageView
        android:id="@+id/place2O"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="160dp"
        android:layout_marginBottom="608dp"
        android:clickable="false"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/o" />

    <ImageView
        android:id="@+id/place9X"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="284dp"
        android:layout_marginTop="264dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/x" />

    <ImageView
        android:id="@+id/place1X"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="32dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/place4O"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/x" />

    <ImageView
        android:id="@+id/place2X"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="164dp"
        android:layout_marginBottom="32dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/place4O"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/x" />

    <ImageView
        android:id="@+id/place3X"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="284dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/todo"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/place4O"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/x" />

    <ImageView
        android:id="@+id/place4X"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="32dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/place7O"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/x" />

    <ImageView
        android:id="@+id/place5X"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="32dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place2X"
        app:srcCompat="@drawable/x" />

    <ImageView
        android:id="@+id/place6X"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="280dp"
        android:layout_marginBottom="28dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/place7O"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/x" />

    <ImageView
        android:id="@+id/place7X"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="264dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/x" />

    <Button
        android:id="@+id/place4"
        android:layout_width="138dp"
        android:layout_height="102dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="148dp"
        android:alpha="0"
        android:contentDescription="4"
        android:cursorVisible="false"
        android:onClick="click"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/place5"
        android:layout_width="115dp"
        android:layout_height="114dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="140dp"
        android:alpha="0"
        android:contentDescription="5"
        android:cursorVisible="false"
        android:onClick="click"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/place6"
        android:layout_width="146dp"
        android:layout_height="111dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="140dp"
        android:alpha="0"
        android:contentDescription="6"
        android:cursorVisible="false"
        android:onClick="click"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/place7"
        android:layout_width="139dp"
        android:layout_height="143dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="252dp"
        android:alpha="0"
        android:contentDescription="7"
        android:cursorVisible="false"
        android:onClick="click"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/place3"
        android:layout_width="148dp"
        android:layout_height="102dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="12dp"
        android:alpha="0"
        android:contentDescription="3"
        android:cursorVisible="false"
        android:onClick="click"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/place9"
        android:layout_width="146dp"
        android:layout_height="130dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="252dp"
        android:alpha="0"
        android:contentDescription="9"
        android:cursorVisible="false"
        android:onClick="click"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/place2"
        android:layout_width="116dp"
        android:layout_height="105dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:contentDescription="2"
        android:cursorVisible="false"
        android:onClick="click"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clear"
        android:layout_width="114dp"
        android:layout_height="70dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="4dp"
        android:onClick="clearAll"
        android:text="@string/play_again"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/board" />

    <TextView
        android:id="@+id/gameOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="580dp"
        android:text="@string/game_over"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="80sp"
        android:textStyle="bold|italic"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="500dp"
        android:text="@string/status"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="55sp"
        android:textStyle="bold|italic"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>